# bg_shop_django

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  dev_notes.md  docker-compose.yaml  pyproject.toml  requirements.txt
bg_shop/: .flake8  manage.py
bg_shop/account/: admin.py  apis.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  utils.py  validators.py
bg_shop/account/fixtures/: initial_profile.json  test_profile.json  test_user.json
bg_shop/account/migrations/: 0001_initial.py
bg_shop/api/: pagination.py  urls.py  utils.py
bg_shop/bg_shop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
bg_shop/bg_shop/settings/: base.py  local.py  prod.py  test.py
bg_shop/common/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  validators.py
bg_shop/common/fixtures/: initial_image.json
bg_shop/common/migrations/: 0001_initial.py  0002_alter_image_description_alter_image_img.py  0002_alter_image_img.py
bg_shop/dynamic_config/: admin.py  apps.py  models.py  selectors.py  services.py
bg_shop/dynamic_config/migrations/: 0001_initial.py  0002_alter_dynamicconfig_main_email_and_more.py  0002_auto_20230518_1659.py  0002_auto_20230610_1427.py  0003_alter_dynamicconfig_id.py
bg_shop/dynamic_config/tests/: test_dynamic_config_model.py  test_dynamic_config_selector.py  test_dynamic_config_service.py
bg_shop/frontend/: urls.py
bg_shop/orders/: admin.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py
bg_shop/orders/apis/: __init__.py  cart_apis.py  order_apis.py
bg_shop/orders/fixtures/: initial_order.json  initial_ordered_product.json  test_order.json  test_ordered_product.json
bg_shop/orders/migrations/: 0001_initial.py  0002_order_is_active.py  0002_order_paid.py  (+5 more)
bg_shop/payment/: admin.py  apis.py  enums.py  models.py  services.py  tasks.py  urls.py  validators.py  webhooks.py
bg_shop/scripts/: init_load_data.sh
bg_shop/shop/: admin.py  filters.py  models.py  serializers.py  services.py  urls.py
config/nginx/: default.conf.template
(+165 files in other folders)
